--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <title>Título da página</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    Aqui vai o código HTML que fará seu site aparecer.
-  </body>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="style.css" href="style.css">
+  <title>Document</title>
+</head>
+
+<body>
+
+  <header>O melhor site de vídeos de matemática</header>
+
+  <h1>Ângulos e Teoremas</h1>
+
+  <p>Aula da professora Maria</p>
+
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/OnYR5bkFfjdo?si=Rj-fp-ZvtyVbDpbx"
+    title="Vídeo de aula sobre Ângulos e Teoremas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+    encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+
+</body>
+
 </html>
