--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="style.css" href="style.css">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Matemágica</title>
 </head>
 
+
 <body>
+    <header>O melhor site de vídeos de matemática</header>
+    <section>
+        <div>
+            <h1>Ângulos e teoremas</h1>
+            <p>Aula da profe Maria</p>
+        </div>
 
-  <header>O melhor site de vídeos de matemática</header>
 
-  <h1>Ângulos e Teoremas</h1>
-
-  <p>Aula da professora Maria</p>
-
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/OnYR5bkFfjdo?si=Rj-fp-ZvtyVbDpbx"
-    title="Vídeo de aula sobre Ângulos e Teoremas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-    encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-  </iframe>
-
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/0nYR5bkfjd0?si=Rj-fp-ZvtyVbDpbx"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 </body>
 
 </html>
