--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Matemágica</title>
+    <title>Curiosidades</title>
 </head>
 
 
 <body>
-    <header>O melhor site de vídeos de matemática</header>
+    <header>O melhor site de vídeos de Curiosidades</header>
     <section>
         <div class="chamada-texto">
-            <h1>Ângulos e teoremas</h1>
-            <p>Aula da profe Maria</p>
+            <h1>Texto</h1>
+            <p>Texto</p>
         </div>
 
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/0nYR5bkfjd0?si=Rj-fp-ZvtyVbDpbx"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=NzD-L6nxVic"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
